@@ -3,7 +3,6 @@ package io.quarkiverse.langchain4j.testing.evaluation;
 import java.util.AbstractList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * A list of {@link EvaluationSample} instances.
@@ -18,32 +17,20 @@ public class Samples<T> extends AbstractList<EvaluationSample<T>>
     /**
      * Create a new set of samples.
      *
-     * @param samples the samples, must not be {@code null}, must not be empty.
+     * @param samples the samples, if {@code null} an empty set of samples is created.
      */
     public Samples(List<EvaluationSample<T>> samples) {
-        if (samples == null) {
-            throw new IllegalArgumentException("Samples must not be null");
-        }
-        if (samples.isEmpty()) {
-            throw new IllegalArgumentException("Samples must not be empty");
-        }
-        this.samples = samples;
+        this.samples = (samples != null) ? samples : List.of();
     }
 
     /**
      * Create a new set of samples.
      *
-     * @param samples the samples, must not be {@code null}, must not be empty.
+     * @param samples the samples, if {@code null} an empty set of samples is created.
      */
     @SafeVarargs
     public Samples(EvaluationSample<T>... samples) {
-        if (samples == null) {
-            throw new IllegalArgumentException("Samples must not be null");
-        }
-        if (samples.length == 0) {
-            throw new IllegalArgumentException("Samples must not be empty");
-        }
-        this.samples = List.of(samples);
+        this.samples = (samples != null) ? List.of(samples) : List.of();
     }
 
     /**
@@ -66,26 +53,21 @@ public class Samples<T> extends AbstractList<EvaluationSample<T>>
      * Filter samples by tags.
      * <p>
      * Returns a new Samples instance containing only samples that have at least one of the specified tags.
+     * If no samples match the specified tags, an empty Samples instance is returned.
      * </p>
      *
      * @param tags the tags to filter by
      * @return a new Samples instance with filtered samples
-     * @throws IllegalArgumentException if no samples match the tags
      */
     public Samples<T> filterByTags(String... tags) {
-        if (tags == null || tags.length == 0) {
+        if ((tags == null) || (tags.length == 0)) {
             return this;
         }
 
         List<String> tagList = Arrays.asList(tags);
         List<EvaluationSample<T>> filtered = samples.stream()
                 .filter(sample -> sample.tags().stream().anyMatch(tagList::contains))
-                .collect(Collectors.toList());
-
-        if (filtered.isEmpty()) {
-            throw new IllegalArgumentException(
-                    String.format("No samples found with tags: %s", Arrays.toString(tags)));
-        }
+                .toList();
 
         return new Samples<>(filtered);
     }
